// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/TextField Text Field Sizes 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-1:hover {
  background-color: #f3f5f8;
}

.emotion-1:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-2 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-2>div {
  position: relative;
}

.emotion-3 {
  width: 100%;
}

.emotion-4 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-4+label {
  font-size: 0.9375rem;
}

.emotion-4:focus {
  outline: none;
}

.emotion-4::-webkit-input-placeholder {
  color: transparent;
}

.emotion-4::-moz-placeholder {
  color: transparent;
}

.emotion-4:-ms-input-placeholder {
  color: transparent;
}

.emotion-4::placeholder {
  color: transparent;
}

.emotion-4:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-4:focus+label,
.emotion-4:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-4:disabled {
  cursor: not-allowed;
}

.emotion-5 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: 1.75rem;
  background-color: white;
}

.emotion-6:hover {
  background-color: #f3f5f8;
}

.emotion-6:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-9 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.8125rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-9+label {
  font-size: 0.8125rem;
}

.emotion-9:focus {
  outline: none;
}

.emotion-9::-webkit-input-placeholder {
  color: transparent;
}

.emotion-9::-moz-placeholder {
  color: transparent;
}

.emotion-9:-ms-input-placeholder {
  color: transparent;
}

.emotion-9::placeholder {
  color: transparent;
}

.emotion-9:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-9:focus+label,
.emotion-9:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-9:disabled {
  cursor: not-allowed;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <input
                className="emotion-4"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-5"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-6"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <input
                className="emotion-9"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-5"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field Types 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-1:hover {
  background-color: #f3f5f8;
}

.emotion-1:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-2 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-2>div {
  position: relative;
}

.emotion-3 {
  width: 100%;
}

.emotion-4 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-4+label {
  font-size: 0.9375rem;
}

.emotion-4:focus {
  outline: none;
}

.emotion-4::-webkit-input-placeholder {
  color: transparent;
}

.emotion-4::-moz-placeholder {
  color: transparent;
}

.emotion-4:-ms-input-placeholder {
  color: transparent;
}

.emotion-4::placeholder {
  color: transparent;
}

.emotion-4:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-4:focus+label,
.emotion-4:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-4:disabled {
  cursor: not-allowed;
}

.emotion-5 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <input
                className="emotion-4"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-5"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <input
                className="emotion-4"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-5"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <input
                className="emotion-4"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-5"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with Icons 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-1:hover {
  background-color: #f3f5f8;
}

.emotion-1:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-2 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-2>div {
  position: relative;
}

.emotion-3 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: inherit;
  margin-right: 0.5rem;
}

.emotion-4 {
  width: 100%;
}

.emotion-5 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-5+label {
  font-size: 0.9375rem;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5::-webkit-input-placeholder {
  color: transparent;
}

.emotion-5::-moz-placeholder {
  color: transparent;
}

.emotion-5:-ms-input-placeholder {
  color: transparent;
}

.emotion-5::placeholder {
  color: transparent;
}

.emotion-5:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-5:focus+label,
.emotion-5:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-5:disabled {
  cursor: not-allowed;
}

.emotion-6 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-12 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: 0.5rem;
  margin-right: 0;
}

.emotion-26 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-27 {
  width: 1.625rem;
  position: relative;
  height: 0.375rem;
}

.emotion-28 {
  position: absolute;
  left: 0.625rem;
  left: 0;
  width: 0.375rem;
  height: 0.375rem;
  border-radius: 0.3125rem;
  background-color: #bac6d9;
  color: #bac6d9;
  -webkit-animation: dotFlashing 0.7s infinite linear alternate;
  animation: dotFlashing 0.7s infinite linear alternate;
  -webkit-animation-delay: 0.5s;
  animation-delay: 0.5s;
}

.emotion-28::after,
.emotion-28::before {
  content: '';
  display: inline-block;
  position: absolute;
  top: 0;
}

.emotion-28::before {
  left: -0.625rem;
  width: 0.375rem;
  height: 0.375rem;
  border-radius: 0.3125rem;
  background-color: #bac6d9;
  color: #bac6d9;
  -webkit-animation: dotFlashing 0.7s infinite alternate;
  animation: dotFlashing 0.7s infinite alternate;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
}

.emotion-28::after {
  left: 0.625rem;
  width: 0.375rem;
  height: 0.375rem;
  border-radius: 0.3125rem;
  background-color: #bac6d9;
  color: #bac6d9;
  -webkit-animation: dotFlashing 0.7s infinite alternate;
  animation: dotFlashing 0.7s infinite alternate;
  -webkit-animation-delay: 0.7s;
  animation-delay: 0.7s;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
            <div
              className="emotion-4"
            >
              <input
                className="emotion-5"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-6"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-4"
            >
              <input
                className="emotion-5"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-6"
              >
                Label
                 
              </label>
            </div>
            <div
              className="emotion-12"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
            <div
              className="emotion-4"
            >
              <input
                className="emotion-5"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-6"
              >
                Label
                 
              </label>
            </div>
            <div
              className="emotion-12"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-4"
            >
              <input
                className="emotion-5"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-6"
              >
                Label
                 
              </label>
            </div>
            <div
              className="emotion-12"
            >
              <div
                className="emotion-26"
              >
                <div
                  className="emotion-27"
                  data-testid="dots-loading"
                >
                  <div
                    className="emotion-28"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with KNOBS 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-1:hover {
  background-color: #f3f5f8;
}

.emotion-1:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-2 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-2>div {
  position: relative;
}

.emotion-3 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: inherit;
  margin-right: 0.5rem;
}

.emotion-4 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  fill: #5f6c85;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-5 path {
  fill: #5f6c85;
}

.emotion-6 {
  width: 100%;
}

.emotion-7 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-7+label {
  font-size: 0.9375rem;
}

.emotion-7:focus {
  outline: none;
}

.emotion-7::-webkit-input-placeholder {
  color: transparent;
}

.emotion-7::-moz-placeholder {
  color: transparent;
}

.emotion-7:-ms-input-placeholder {
  color: transparent;
}

.emotion-7::placeholder {
  color: transparent;
}

.emotion-7:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-7:focus+label,
.emotion-7:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-8 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-9 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: 0.5rem;
  margin-right: 0;
}

.emotion-16 {
  fill: #f5781b;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-16 path {
  fill: #f5781b;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <span
                className="emotion-4"
                onClick={[Function]}
              >
                <span
                  className="emotion-5"
                />
              </span>
            </div>
            <div
              className="emotion-6"
            >
              <input
                className="emotion-7"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-8"
              >
                Label
                 
              </label>
            </div>
            <div
              className="emotion-9"
            >
              <span
                className="emotion-4"
                onClick={[Function]}
              >
                <span
                  className="emotion-5"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <span
                className="emotion-4"
                onClick={[Function]}
              >
                <span
                  className="emotion-16"
                />
              </span>
            </div>
            <div
              className="emotion-6"
            >
              <input
                className="emotion-7"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-8"
              >
                Label
                 
              </label>
            </div>
            <div
              className="emotion-9"
            >
              <span
                className="emotion-4"
                onClick={[Function]}
              >
                <span
                  className="emotion-16"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with and without Label 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-1:hover {
  background-color: #f3f5f8;
}

.emotion-1:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-2 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-2>div {
  position: relative;
}

.emotion-3 {
  width: 100%;
}

.emotion-4 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-4+label {
  font-size: 0.9375rem;
}

.emotion-4:focus {
  outline: none;
}

.emotion-4::-webkit-input-placeholder {
  color: transparent;
}

.emotion-4::-moz-placeholder {
  color: transparent;
}

.emotion-4:-ms-input-placeholder {
  color: transparent;
}

.emotion-4::placeholder {
  color: transparent;
}

.emotion-4:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-4:focus+label,
.emotion-4:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-4:disabled {
  cursor: not-allowed;
}

.emotion-5 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-9 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-9+label {
  font-size: 0.9375rem;
}

.emotion-9:focus {
  outline: none;
}

.emotion-9::-webkit-input-placeholder {
  color: #5f6c85;
}

.emotion-9::-moz-placeholder {
  color: #5f6c85;
}

.emotion-9:-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-9::placeholder {
  color: #5f6c85;
}

.emotion-9:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-9:focus+label,
.emotion-9:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-9:disabled {
  cursor: not-allowed;
}

.emotion-13 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-13+label {
  font-size: 0.9375rem;
}

.emotion-13:focus {
  outline: none;
}

.emotion-13::-webkit-input-placeholder {
  color: transparent;
}

.emotion-13::-moz-placeholder {
  color: transparent;
}

.emotion-13:-ms-input-placeholder {
  color: transparent;
}

.emotion-13::placeholder {
  color: transparent;
}

.emotion-13:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-13:focus+label,
.emotion-13:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-13:disabled {
  cursor: not-allowed;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <input
                className="emotion-4"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-5"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <input
                className="emotion-9"
                disabled={false}
                placeholder="Placeholder "
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <input
                className="emotion-13"
                disabled={false}
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField disabled with label 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 0.5;
  cursor: not-allowed;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-1:focus-within {
  box-shadow: 0 0 0 0.0625rem transparent;
}

.emotion-2 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-2>div {
  position: relative;
}

.emotion-3 {
  width: 100%;
}

.emotion-4 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-4+label {
  font-size: 0.9375rem;
}

.emotion-4:focus {
  outline: none;
}

.emotion-4::-webkit-input-placeholder {
  color: transparent;
}

.emotion-4::-moz-placeholder {
  color: transparent;
}

.emotion-4:-ms-input-placeholder {
  color: transparent;
}

.emotion-4::placeholder {
  color: transparent;
}

.emotion-4:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-4:focus+label,
.emotion-4:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-4:disabled {
  cursor: not-allowed;
}

.emotion-5 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <input
                className="emotion-4"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-5"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <input
                className="emotion-4"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-5"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <input
                className="emotion-4"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-5"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField locked with label 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: not-allowed;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 0.0625rem transparent;
}

.emotion-3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-3>div {
  position: relative;
}

.emotion-4 {
  width: 100%;
}

.emotion-5 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-5+label {
  font-size: 0.9375rem;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5::-webkit-input-placeholder {
  color: transparent;
}

.emotion-5::-moz-placeholder {
  color: transparent;
}

.emotion-5:-ms-input-placeholder {
  color: transparent;
}

.emotion-5::placeholder {
  color: transparent;
}

.emotion-5:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-5:focus+label,
.emotion-5:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-5:disabled {
  cursor: not-allowed;
}

.emotion-6 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-7 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: 0.5rem;
  margin-right: 0;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #5f6c85;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-9 path {
  fill: #5f6c85;
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: not-allowed;
  min-width: 9.375rem;
  height: 1.75rem;
  background-color: white;
}

.emotion-27:focus-within {
  box-shadow: 0 0 0 0.0625rem transparent;
}

.emotion-30 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.8125rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-30+label {
  font-size: 0.8125rem;
}

.emotion-30:focus {
  outline: none;
}

.emotion-30::-webkit-input-placeholder {
  color: transparent;
}

.emotion-30::-moz-placeholder {
  color: transparent;
}

.emotion-30:-ms-input-placeholder {
  color: transparent;
}

.emotion-30::placeholder {
  color: transparent;
}

.emotion-30:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-30:focus+label,
.emotion-30:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-30:disabled {
  cursor: not-allowed;
}

.emotion-34 {
  fill: #5f6c85;
  width: 1rem;
  height: 1rem;
}

.emotion-34 path {
  fill: #5f6c85;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-0"
        >
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-2"
            >
              <div
                className="emotion-3"
              >
                <div
                  className="emotion-4"
                >
                  <input
                    className="emotion-5"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-6"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-2"
            >
              <div
                className="emotion-3"
              >
                <div
                  className="emotion-4"
                >
                  <input
                    className="emotion-5"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-6"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-2"
            >
              <div
                className="emotion-3"
              >
                <div
                  className="emotion-4"
                >
                  <input
                    className="emotion-5"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-6"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-0"
        >
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-27"
            >
              <div
                className="emotion-3"
              >
                <div
                  className="emotion-4"
                >
                  <input
                    className="emotion-30"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-6"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-34"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-27"
            >
              <div
                className="emotion-3"
              >
                <div
                  className="emotion-4"
                >
                  <input
                    className="emotion-30"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-6"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-34"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-27"
            >
              <div
                className="emotion-3"
              >
                <div
                  className="emotion-4"
                >
                  <input
                    className="emotion-30"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-6"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="emotion-7"
                >
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-34"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField with label and statuses 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #e51460;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-2:hover {
  background-color: #f3f5f8;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 0.125rem #e51460;
  background-color: #e7ebf2;
}

.emotion-3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-3>div {
  position: relative;
}

.emotion-4 {
  width: 100%;
}

.emotion-5 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-5+label {
  font-size: 0.9375rem;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5::-webkit-input-placeholder {
  color: transparent;
}

.emotion-5::-moz-placeholder {
  color: transparent;
}

.emotion-5:-ms-input-placeholder {
  color: transparent;
}

.emotion-5::placeholder {
  color: transparent;
}

.emotion-5:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-5:focus+label,
.emotion-5:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-5:disabled {
  cursor: not-allowed;
}

.emotion-6 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #FF176B;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #e51460;
  font-size: 0.75rem;
  line-height: 1;
  padding: 0.5rem 0 0;
}

.emotion-7 svg {
  padding: 0 0.125rem;
}

.emotion-7 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0 0.125rem;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #FF176B;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-9 path {
  fill: #FF176B;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-19:hover {
  background-color: #f3f5f8;
}

.emotion-19:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-23 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #5f6c85;
  font-size: 0.75rem;
  line-height: 1;
  padding: 0.5rem 0 0;
}

.emotion-24 svg {
  padding: 0 0.125rem;
}

.emotion-24 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0 0.125rem;
}

.emotion-26 {
  fill: #5f6c85;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-26 path {
  fill: #5f6c85;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-2"
            >
              <div
                className="emotion-3"
              >
                <div
                  className="emotion-4"
                >
                  <input
                    className="emotion-5"
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-6"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
            <div
              className="emotion-7"
              data-testid="error"
            >
              <span
                className="emotion-8"
                onClick={[Function]}
              >
                <span
                  className="emotion-9"
                />
              </span>
              Error in Text Field
            </div>
          </div>
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              style={
                Object {
                  "width": "200px",
                }
              }
            >
              <div
                className="emotion-2"
              >
                <div
                  className="emotion-3"
                >
                  <div
                    className="emotion-4"
                  >
                    <input
                      className="emotion-5"
                      disabled={false}
                      placeholder="Label"
                      required={false}
                    />
                    <label
                      className="emotion-6"
                    >
                      Label
                       
                    </label>
                  </div>
                </div>
              </div>
              <div
                className="emotion-7"
                data-testid="error"
              >
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-9"
                  />
                </span>
                Big Error Message for fixed width TextField to see icon alignment: Error Error Error Error Error Error Error Error Error Error Error
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-19"
            >
              <div
                className="emotion-3"
              >
                <div
                  className="emotion-4"
                >
                  <input
                    className="emotion-5"
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-23"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
            <div
              className="emotion-24"
              data-testid="error"
            >
              <span
                className="emotion-8"
                onClick={[Function]}
              >
                <span
                  className="emotion-26"
                />
              </span>
              Error in Text Field
            </div>
          </div>
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              style={
                Object {
                  "width": "200px",
                }
              }
            >
              <div
                className="emotion-19"
              >
                <div
                  className="emotion-3"
                >
                  <div
                    className="emotion-4"
                  >
                    <input
                      className="emotion-5"
                      disabled={false}
                      placeholder="Label"
                      required={false}
                    />
                    <label
                      className="emotion-23"
                    >
                      Label
                       
                    </label>
                  </div>
                </div>
              </div>
              <div
                className="emotion-24"
                data-testid="error"
              >
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-26"
                  />
                </span>
                Big Hint Message for fixed width TextField to see icon alignment: Hint Hint Hint Hint Hint Hint Hint Hint Hint Hint
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField with prefix/suffix 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  height: 2.875rem;
  background-color: white;
}

.emotion-1:hover {
  background-color: #f3f5f8;
}

.emotion-1:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-2 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-2>div {
  position: relative;
}

.emotion-3 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: inherit;
  margin-right: 0.5rem;
}

.emotion-4 {
  width: 100%;
}

.emotion-5 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-5+label {
  font-size: 0.9375rem;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5::-webkit-input-placeholder {
  color: transparent;
}

.emotion-5::-moz-placeholder {
  color: transparent;
}

.emotion-5:-ms-input-placeholder {
  color: transparent;
}

.emotion-5::placeholder {
  color: transparent;
}

.emotion-5:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-5:focus+label,
.emotion-5:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-5:disabled {
  cursor: not-allowed;
}

.emotion-10 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: 0.5rem;
  margin-right: 0;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "width": "80px",
            }
          }
        >
          <div
            className="emotion-1"
          >
            <div
              className="emotion-2"
            >
              <div
                className="emotion-3"
              >
                <div
                  style={
                    Object {
                      "color": "gray",
                    }
                  }
                >
                  $
                </div>
              </div>
              <div
                className="emotion-4"
              >
                <input
                  className="emotion-5"
                  disabled={false}
                  required={false}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "width": "80px",
            }
          }
        >
          <div
            className="emotion-1"
          >
            <div
              className="emotion-2"
            >
              <div
                className="emotion-4"
              >
                <input
                  className="emotion-5"
                  disabled={false}
                  required={false}
                />
              </div>
              <div
                className="emotion-10"
              >
                <div
                  style={
                    Object {
                      "color": "gray",
                    }
                  }
                >
                  %
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "width": "120px",
            }
          }
        >
          <div
            className="emotion-1"
          >
            <div
              className="emotion-2"
            >
              <div
                className="emotion-3"
              >
                <div
                  style={
                    Object {
                      "color": "gray",
                    }
                  }
                >
                  $
                </div>
              </div>
              <div
                className="emotion-4"
              >
                <input
                  className="emotion-5"
                  disabled={false}
                  required={false}
                />
              </div>
              <div
                className="emotion-10"
              >
                <div
                  style={
                    Object {
                      "color": "gray",
                    }
                  }
                >
                  %
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
